--- a/Memory Game/Memory Game.html
+++ b/Memory Game/Memory Game.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Oswald&family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="js/memory game.js" defer></script>
     <title>Memory Game</title>
 </head>
 <body>
     <div id="container">
+        <header id="header">
+            <h1>Memory Game</h1>
+        </header>
         <section id="board">
             <div id="card1" class="card"><img class="img" src="imgs/img1.jpg" alt="joseph"></div>
             <div id="card2" class="card"><img class="img" src="imgs/img2.jpg" alt="jotaro"></div>
@@ -19,9 +25,12 @@
             <div id="card6" class="card"><img class="img" src="imgs/img2.jpg" alt="jotaro"></div>
         </section>
         <section id="outcome">
-            <p id="score">Score: </p>
-            <p id="fails">Failed Attempts: </p>
+            <p id="score_text">Score:</p>
+            <div id="score">0</div>
+            <p id="fails_text">Failed Attempts:</p>
+            <div id="fails">0</div>
         </section>
+        <button id="reset_button">RESET</button>
     </div>
 </body>
 </html>
